--- a/.github/workflows/master_eaterapi.yml
+++ b/.github/workflows/master_eaterapi.yml
@@ -22,8 +22,8 @@ jobs:
           dotnet-version: '6.0.x'
           include-prerelease: true
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+      #- name: Build with dotnet
+      #  run: dotnet build --configuration Release
 
       - name: dotnet publish API
         run: dotnet publish API -c Release -o ${{env.DOTNET_ROOT}}/myapp
